--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                     <div class="slideBtn">
-                        <button onclick="location.href='sub_page/savethechildren/index.html'">VIEW WEBSITE</button>
+                        <button onclick="location.href='https://jasmine-my.github.io/save-the-chilren/'">VIEW WEBSITE</button>
                         <button onclick="location.href='https://github.com/jasmine-my/save-the-chilren'">VIEW CODE</button>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                     <div class="slideBtn">
-                        <button onclick="location.href='sub_page/shakeshack/index.html'">VIEW WEBSITE</button>
+                        <button onclick="location.href='https://jasmine-my.github.io/shakeshack/'">VIEW WEBSITE</button>
                         <button onclick="location.href='https://github.com/jasmine-my/shakeshack'">VIEW CODE</button>
                     </div>
                 </div>
@@ -323,7 +323,7 @@
                         </div>
                     </div>
                     <div class="slideBtn">
-                        <button onclick="location.href='sub_page/coronow/index.html'">VIEW WEBSITE</button>
+                        <button onclick="location.href='https://jasmine-my.github.io/coronow/'">VIEW WEBSITE</button>
                         <button onclick="location.href='https://github.com/jasmine-my/coronow'">VIEW CODE</button>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
                         </div>
                     </div>
                     <div class="slideBtn">
-                        <button onclick="location.href='sub_page/heartcalculate/index.html'">VIEW WEBSITE</button>
+                        <button onclick="location.href='https://jasmine-my.github.io/heart-calculator/'">VIEW WEBSITE</button>
                         <button onclick="location.href='https://github.com/jasmine-my/heart-calculator'">VIEW CODE</button>
                     </div>
                 </div>
