--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hi">
             <div class="gradient sideY">
                 <div class="text">
-                    <h2>안녕하세요<br>배움을 통해 변화하는<br>내연경 입니다</h2>
+                    <h2>안녕하세요<br>매일 성장하는 개발자<br>내연경 입니다</h2>
                     <h5>NO CODE 말고 YES CODE!<br>UX, UI와 Javascript 기술에 관심이 많으며 배우기를 멈추지 않는 사람입니다.</h5>
                 </div>
             </div>
